compiler/testData/compileKotlinAgainstCustomBinaries/jvmDefaultClashWithNoCompatibility/output.txt
compiler/testData/compileKotlinAgainstCustomBinaries/jvmDefaultClashWithNoCompatibility/source.kt:12:7: error: explicit override is required for 'public open fun ekonstuate(): Any? defined in KotlinEkonstuatableUElement' in the '-Xjvm-default=all-compatibility' mode. Otherwise, implicit class override 'public open fun ekonstuate(): Any? defined in KotlinAbstractUExpression' (compiled in the old -Xjvm-default mode) is not fully overridden and would be incorrectly called at runtime
class KotlinUBinaryExpressionWithType : KotlinAbstractUExpression(), KotlinEkonstuatableUElement {}
      ^
COMPILATION_ERROR
